[SW-92] refactor(schedule): 서비스 내 Collector 분리